Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9
-
None
-
-
955e11511 (122-based), efd7cf2ea (118-based), 9ea08e452 (126-based)
Description
Steps to reproduce:
- Open simplebrowser
- Right click -> "view page source". This produces [1866857:1866857:0806/163044.194521:WARNING:render_widget_host_impl.cc(275)] Input request on unbound interface
- Ctrl-A to select all
- Right-click. This produces the crash dump:
[1866857:1866857:0806/162856.672369:INFO:web_contents_delegate_qt.cpp(282)] ProcessGone: 3 (133) [1867079:1:0806/162903.289339:FATAL:position.cc(128)] Check failed: offset == 0 (3 vs. 0) #0 0x70fbd8b7cfec base::debug::CollectStackTrace() #1 0x70fbd8b427ca base::debug::StackTrace::StackTrace() #2 0x70fbd8b42785 base::debug::StackTrace::StackTrace() #3 0x70fbd88de238 logging::LogMessage::Flush() #4 0x70fbd88de177 logging::LogMessage::~LogMessage() #5 0x70fbd88ef6a0 logging::(anonymous namespace)::DCheckLogMessage::~DCheckLogMessage() #6 0x70fbd88ef6e9 logging::(anonymous namespace)::DCheckLogMessage::~DCheckLogMessage() #7 0x70fbd88eafed logging::CheckError::~CheckError() #8 0x70fbdecb682d blink::PositionTemplate<>::PositionTemplate() #9 0x70fbded75141 blink::TextFragmentSelectorGenerator::AdjustSelection() #10 0x70fbded745d9 blink::TextFragmentSelectorGenerator::StartGeneration() #11 0x70fbded7441a blink::TextFragmentSelectorGenerator::Generate() #12 0x70fbded76ebb blink::TextFragmentHandler::StartGeneratingForCurrentSelection() #13 0x70fbded7718b blink::TextFragmentHandler::OpenedContextMenuOverSelection() #14 0x70fbdf4e9ed8 blink::ContextMenuController::ShowContextMenu() #15 0x70fbdf4e923d blink::ContextMenuController::HandleContextMenuEvent() #16 0x70fbdfcf7319 blink::EventDispatcher::DispatchEventPostProcess() #17 0x70fbdfceb876 blink::EventDispatcher::Dispatch() #18 0x70fbded0bfd2 blink::PointerEvent::DispatchEvent() #19 0x70fbdfceb001 blink::EventDispatcher::DispatchEvent() #20 0x70fbdf06e6ca blink::MouseEventManager::DispatchMouseEvent() #21 0x70fbdf06816d blink::EventHandler::SendContextMenuEvent() #22 0x70fbdee7fc6f blink::WebFrameWidgetImpl::MouseContextMenu() #23 0x70fbdee7f9ac blink::WebFrameWidgetImpl::HandleMouseDown() #24 0x70fbdf079271 blink::WidgetEventHandler::HandleInputEvent() #25 0x70fbdee85d99 blink::WebFrameWidgetImpl::HandleInputEvent() #26 0x70fbdfb19e5f blink::WidgetBaseInputHandler::HandleInputEvent() #27 0x70fbdfb20e89 blink::WidgetInputHandlerManager::HandleInputEvent() #28 0x70fbdfb20ef1 blink::WidgetInputHandlerManager::HandleInputEvent() #29 0x70fbdfb185ea blink::MainThreadEventQueue::HandleEventOnMainThread() #30 0x70fbdfb1b96e blink::QueuedWebInputEvent::Dispatch() #31 0x70fbdfb17f42 blink::MainThreadEventQueue::DispatchEvents() #32 0x70fbcaf06da6 base::OnceCallback<>::Run() #33 0x70fbd8a16f98 base::TaskAnnotator::RunTaskImpl() #34 0x70fbd8a6c4e7 base::TaskAnnotator::RunTask<>() #35 0x70fbd8a6c1ec base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl() #36 0x70fbd8a6b6bf base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork() #37 0x70fbd8a6c473 base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork() #38 0x70fbd892f89b base::MessagePumpDefault::Run() #39 0x70fbd8a6cafc base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::Run() #40 0x70fbd89c79f4 base::RunLoop::Run() #41 0x70fbde2dc157 content::RendererMain() #42 0x70fbd7645b35 content::RunZygote() #43 0x70fbd7646314 content::RunOtherNamedProcessTypeMain() #44 0x70fbd76476b7 content::ContentMainRunnerImpl::Run() #45 0x70fbd7643f8d content::RunContentProcess() #46 0x70fbd764455b content::ContentMain() #47 0x70fbcaf8d463 QtWebEngineCore::processMain() #48 0x5c496139c0e2 main #49 0x70fbbc429d90 (/usr/lib/x86_64-linux-gnu/libc.so.6+0x29d8f) #50 0x70fbbc429e40 __libc_start_main #51 0x5c496139bd35 _start Task trace: #0 0x70fbdfb17c34 blink::MainThreadEventQueue::PostTaskToMainThread() #1 0x70fbd9f3023e mojo::Connector::PostDispatchNextMessageFromPipe() #2 0x70fbd9fa727c mojo::SimpleWatcher::Context::Notify()[1866857:1866857:0806/162906.680246:INFO:web_contents_delegate_qt.cpp(282)] ProcessGone: 3 (133)
More info:
- Happens on both xcb and wayland QPA
- Selecting part of the text works fine
- Trying to drag a partial or full selection results in a freeze with WebContentsAdapter::updateDragAction was not called within 3000 ms. printed