Fix DCHECK failure in text fragment selector generator

The issue is also present in the Chromium build. This DCHECK is
triggered when trying to create a PositionInFlatTree with a null
node and a non-zero offset. Set the offset to zero when the node
is null, and added the necessary nullptr check to resolve the issue.

Fixes: QTBUG-127786
Pick-to: 118-based
Change-Id: Id9ac516337949815ee3f80730a011e904eeb0e1e
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/590452
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>